Saving low battery notification information

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,9 @@
     <string name="sml">Small</string>
     <string name="med">Medium</string>
     <string name="lrg">Large</string>
+    <string name="namepref">nameKey</string>
+    <string name="phonepref">phoneKey</string>
+    <string name="messagepref">messageKey</string>
+    <string name="notificationpref">notificationKey</string>
+
 </resources>
